namespace java com.sample.thrift.java
#@namespace scala com.sample.thrift

struct SampleResponse {
	1: string greeting
}
