namespace java com.sample.thrift.java
#@namespace scala com.sample.thrift

struct SampleRequest {
	1: string name
}
